--- a/app/src/main/res/layout/overlay_root.xml
+++ b/app/src/main/res/layout/overlay_root.xml
@@ -1,56 +1,60 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content">
 
-    <FrameLayout
-        android:id="@+id/bubbleContainer"
-        android:layout_width="55dp"
-        android:layout_height="55dp"
-        android:layout_alignParentBottom="true"
-        android:background="@android:drawable/screen_background_dark_transparent">
-        
-        <ImageView
-            android:id="@+id/bubbleIcon"
-            android:layout_width="35dp"
-            android:layout_height="35dp"
-            android:layout_gravity="center"
-            android:src="@android:drawable/ic_menu_search" />
-    </FrameLayout>
-
     <LinearLayout
-        android:id="@+id/panelBubble"
-        android:layout_width="220dp"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_above="@id/bubbleContainer"
-        android:background="#EE000000"
         android:orientation="vertical"
-        android:padding="10dp"
-        android:visibility="gone">
+        android:gravity="start">
 
-        <TextView
-            android:id="@+id/stateText"
-            android:layout_width="match_parent"
+        <LinearLayout
+            android:id="@+id/panelBubble"
+            android:layout_width="220dp"
             android:layout_height="wrap_content"
-            android:text="Estado: Sshot / Fen / Ai"
-            android:textColor="#BBBBBB"
-            android:textSize="11sp" />
+            android:background="#EE000000"
+            android:orientation="vertical"
+            android:padding="10dp"
+            android:visibility="gone">
 
-        <TextView
-            android:id="@+id/apiDataText"
-            android:layout_width="match_parent"
-            android:layout_height="100dp"
-            android:text="Esperando datos..."
-            android:textColor="#FFFFFF" />
+            <TextView
+                android:id="@+id/stateText"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Estado: Sshot / Fen / Ai"
+                android:textColor="#BBBBBB"
+                android:textSize="10sp" />
 
-        <TextView
-            android:id="@+id/btnClosePanel"
-            android:layout_width="match_parent"
-            android:layout_height="40dp"
-            android:gravity="center"
-            android:text="CERRAR PANEL"
-            android:textColor="#FF5555"
-            android:textStyle="bold" />
+            <TextView
+                android:id="@+id/apiDataText"
+                android:layout_width="match_parent"
+                android:layout_height="100dp"
+                android:text="Esperando datos..."
+                android:textColor="#FFFFFF" />
+
+            <TextView
+                android:id="@+id/btnClosePanel"
+                android:layout_width="match_parent"
+                android:layout_height="40dp"
+                android:gravity="center"
+                android:text="CERRAR PANEL"
+                android:textColor="#FF5555"
+                android:textStyle="bold" />
+        </LinearLayout>
+
+        <FrameLayout
+            android:id="@+id/bubbleContainer"
+            android:layout_width="55dp"
+            android:layout_height="55dp"
+            android:background="@android:drawable/screen_background_dark_transparent">
+            
+            <ImageView
+                android:id="@+id/bubbleIcon"
+                android:layout_width="35dp"
+                android:layout_height="35dp"
+                android:layout_gravity="center"
+                android:src="@android:drawable/ic_menu_search" />
+        </FrameLayout>
     </LinearLayout>
-
-</RelativeLayout>
+</FrameLayout>
