--- a/app/src/main/res/layout/overlay_root.xml
+++ b/app/src/main/res/layout/overlay_root.xml
@@ -45,15 +45,16 @@
 
         <FrameLayout
             android:id="@+id/bubbleContainer"
-            android:layout_width="60dp"
-            android:layout_height="60dp"
-            android:background="@android:color/transparent">
+            android:layout_width="80dp"
+            android:layout_height="80dp"
+            android:background="@android:color/transparent"
+            android:padding="0dp">
             
             <ImageView
                 android:id="@+id/bubbleIcon"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:scaleType="centerInside"
+                android:scaleType="centerCrop"
                 android:src="@drawable/ic_analyzer" />
         </FrameLayout>
     </LinearLayout>
