--- a/app/src/main/res/layout/overlay_root.xml
+++ b/app/src/main/res/layout/overlay_root.xml
@@ -2,11 +2,13 @@
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content">
+
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="vertical"
         android:gravity="center_horizontal">
+
         <LinearLayout
             android:id="@+id/panelBubble"
             android:layout_width="220dp"
@@ -15,6 +17,7 @@
             android:orientation="vertical"
             android:padding="10dp"
             android:visibility="gone">
+
             <TextView
                 android:id="@+id/stateText"
                 android:layout_width="match_parent"
@@ -22,12 +25,14 @@
                 android:text="Estado: Sshot / Fen / Ai"
                 android:textColor="#BBBBBB"
                 android:textSize="10sp" />
+
             <TextView
                 android:id="@+id/apiDataText"
                 android:layout_width="match_parent"
                 android:layout_height="100dp"
                 android:text="Esperando datos..."
                 android:textColor="#FFFFFF" />
+
             <TextView
                 android:id="@+id/btnClosePanel"
                 android:layout_width="match_parent"
@@ -37,17 +42,19 @@
                 android:textColor="#FF5555"
                 android:textStyle="bold" />
         </LinearLayout>
+
         <FrameLayout
             android:id="@+id/bubbleContainer"
-            android:layout_width="80dp"
-            android:layout_height="80dp"
-            android:background="@android:color/transparent"
-            android:padding="0dp">
+            android:layout_width="90dp"
+            android:layout_height="90dp"
+            android:background="@drawable/floating_bg">
+            
             <ImageView
                 android:id="@+id/bubbleIcon"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:scaleType="centerCrop"
+                android:layout_width="80dp"
+                android:layout_height="80dp"
+                android:layout_gravity="center"
+                android:scaleType="centerInside"
                 android:src="@drawable/ic_analyzer" />
         </FrameLayout>
     </LinearLayout>
