--- a/app/src/main/res/layout/close_target.xml
+++ b/app/src/main/res/layout/close_target.xml
@@ -2,10 +2,19 @@
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="150dp"
     android:layout_height="150dp">
-    <View
+    <FrameLayout
         android:id="@+id/closeCircle"
         android:layout_width="110dp"
         android:layout_height="110dp"
         android:layout_gravity="center"
-        android:background="@drawable/close_ring_bg" />
+        android:background="@drawable/close_ring_bg">
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:text="✕"
+            android:textColor="#FFFFFF"
+            android:textSize="35sp"
+            android:textStyle="bold" />
+    </FrameLayout>
 </FrameLayout>
