--- a/app/src/main/res/layout/overlay_floating_button.xml
+++ b/app/src/main/res/layout/overlay_floating_button.xml
@@ -10,7 +10,7 @@
     android:layout_width="80dp"
     android:layout_height="80dp"
     android:padding="0dp"
-    android:src="@drawable/overlay_btn_icon"
+    android:src="@drawable/bubble_icon"
     android:scaleType="fitXY"
     android:background="@null"
     android:contentDescription="chesz" />
